--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="main">
       <nav>
-        <span><img width="53" src="image/netflix.svg" alt="" /></span>
+        <span><img width="53" src="netflix.svg" alt="" /></span>
         <div>
           <button class="btn">English</button>
           <button class="btn btn-red-sm">Sign In</button>
